--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -37,9 +37,9 @@ spring:
       indent-output: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/PFleaker
-    username: PFleaker
-    password:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: password
     hikari:
       poolName: Hikari
       auto-commit: false
