--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -33,9 +33,9 @@ spring:
       enabled: false
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/PFleaker
-    username: PFleaker
-    password:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: password
     hikari:
       poolName: Hikari
       auto-commit: false
